<resources>

    <string name="app_name">Squiggle</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    Firebase Keys -->
    <string name="rooms">rooms</string>
    <string name="Players">Players</string>
    <string name="info">info</string>
    <string name="reference">reference</string>
    <string name="host">host</string>
    <string name="drawingData">drawingData</string>
    <string name="server">server</string>
    <string name="gamestarted">gamestarted</string>
    <string name="rounds">rounds</string>
    <string name="currentRound">currentRound</string>
    <string name="countdown">countdown</string>
    <string name="chanceChange">chanceChange</string>
    <string name="games">games</string>
    <string name="Chats">Chats</string>
    <string name="chanceUID">chanceUID</string>
    <string name="wordToGuess">wordToGuess</string>
    <string name="score">score</string>

    <!--    General Strings -->
    <string name="email">Email Id</string>
    <string name="password">Password</string>
    <string name="enterPassword">Enter Password</string>
    <string name="fieldEmpty">No field should remain empty!</string>
    <string name="packageName">com.thelazypeople.scribbl</string>
    <string name="userId">UserID</string>
    <string name="error">ERROR</string>
    <string name="EMPTY">EMPTY</string>
    <string name="emptyText">Empty text</string>
    <string name="wordGuessedModified">word guessed!</string>
    <string name="wordGuessed">word guessed!!</string>
    <string name="userName">userName</string>
    <string name="startedGameText">Game Started</string>
    <string name="userNotFoundError">User ID not found Error!</string>
    <string name="correct_word">Correct word is</string>
    <string name="game">GAME</string>
    <string name="over">OVER</string>
    <string name="cannotEnterWithOnePlayer">Cannot start game with only one player in the room</string>
    <string name="drawNow">DRAW NOW!</string>

    <!--    Toggle buttons of Navigational Drawers -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="scoreOfCurPlayer">scoreOfCurPlayer</string>

    <!--    Sign In and Sign Up Fragment -->
    <string name="enterNickname">Please enter the NickName</string>
    <string name="enterEmail">Please enter the Email</string>
    <string name="passwordLengthSmall">Length greater than 5</string>
    <string name="authFailed">Authentication failed</string>
    <string name="logOut_alert">Do you want to Log Out?</string>

    <!--    createRoom and joinRoom -->
    <string name="createRoomText">CREATE ROOM</string>
    <string name="joinRoomText">JOIN ROOM</string>
    <string name="closedRoomText">Closed Room</string>
    <string name="openRoomText">Open Room</string>
    <string name="RoomName">Room Name</string>
    <string name="roomCreated">Room Created!</string>
    <string name="createRoomBtn">Create Room</string>
    <string name="joinRoomBtn">Join room</string>
    <string name="ENTER">ENTER</string>
    <string name="insertPassword">Insert the password</string>
    <string name="noPasswordFound">No password found</string>
    <string name="passwordIncorrect">Password incorrect</string>
    <string name="roomJoined">Room joined</string>
    <string name="NO">NO</string>
    <string name="OPEN">OPEN ROOM</string>
    <string name="CLOSED">CLOSED ROOM</string>

    <!--       Creators Details-->
    <string name="thelazypeople"><a href="https://github.com/The-Lazy-People">The Lazy People</a></string>
    <string name="adarsh"><a href="https://www.linkedin.com/in/2001adarshsingh/">Adarsh Singh</a></string>
    <string name="abhishek"><a href="https://www.linkedin.com/in/abhishek-yadav-aps/">Abhishek Yadav</a></string>
    <string name="ayushi"><a href="https://www.linkedin.com/in/ayushi-doshi-731210191/">Ayushi Doshi</a></string>
    <string name="sayantan"><a href="https://www.linkedin.com/in/sayantan-banerjee-19040b175/">Sayantan Banerjee</a></string>

</resources>
